<resources>
    <string name="app_name">MenuApp</string>
    <string name="action_settings">Settings</string>
    <string name="editText_errorMessage">Field can not be empty</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_toolbar">Rezept Index</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MenuApp</string>
    <string name="nav_header_subtitle">Der Essensplaner</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="ingredient_fruit">Früchte</string>
    <string name="ingredient_vegetable">Gemüse</string>
    <string name="ingredient_protein">Proteine</string>
    <string name="ingredient_pantry">Haltbares</string>
    <string name="ingredient_spice">Gewürze</string>
    <string name="details_ingredient">Zutaten:</string>
    <string name="details_instruction">Zubereitung:</string>
    <string name="details_time">Gesamtzeit:</string>
    <string name="details_button_ingredient">Neue Zutat</string>
    <string name="details_button_instruction">Neuer Schritt</string>
    <string name="ingredients">Zutaten</string>
    <string name="recipe_index">Rezept Index</string>
    <string name="meal_plan">Essensplan</string>
    <string name="search_title">Suche</string>
    <string name="search_hint">Rezepte</string>

</resources>
